--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ h1 a {
 
 /* section */
 
+img {
+    box-shadow: 5px 5px 5px  lightgray;
+}
+
 div {
     text-align: center;
 }
@@ -94,7 +98,7 @@ h2 a {
 #categories > div[class^="container"] {
     border: 2px solid black;
     margin: 30px 0;
-    border-radius:20px;
+    border-radius: 20px;
 }
 
 .category_books > div {
@@ -117,7 +121,6 @@ h2 a {
 .bookname > a > button{
     font-size: 110%;
 }
-
 
 
 /* All subcategories */
