--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+img {
+    aspect-ratio: 2/3;
+}
 
 /* button */
 
@@ -21,8 +24,8 @@ button {
 }
 
 .non-clickable {
-    cursor: not-allowed;
     opacity: 0.8;
+    pointer-events: none;
 }
 
 
@@ -32,22 +35,32 @@ header {
     background-color: black;
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
 }
 
-header > div {
-    display: inline-flex;
+header nav > div {
+    display: flex;
+    justify-content: space-between;
 }
 
-header > div > h1 {
+header > nav > div > h1 {
     font-family: 'Brush Script MT', cursive;
+    margin: 10px;
 }
 
 .top_nav {
     list-style-type: none;
-    display: inline-flex;
-    justify-content: center;
+    display: inline-block;
     margin: 10px;
     font-size: 150%;
+}
+
+#topnav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 6px 12px;
+    font-size: small
 }
 
 h1 a {
@@ -56,14 +69,6 @@ h1 a {
 
 .top_nav a {
     color: white;
-}
-
-#top+nav {
-    float: right;
-}
-
-#topnav a {
-    display: block;
 }
 
 /* section */
@@ -79,16 +84,18 @@ div {
 a {
     text-decoration: none;
     display: flex;
+    color: inherit;
     justify-content: center;
 }
 
 a:hover {
-    color: red;
+    color: cyan;
 }
 
 h2 a {
     text-align: center;
     color: black;
+    margin: 8px 0;
 }
 
 #categories {
@@ -103,7 +110,8 @@ h2 a {
 
 .category_books > div {
     display: inline-block;
-    width: 24%;
+    width: 25%;
+    margin: 0 10px;
 }
 
 .homepage_bookimages {
@@ -118,8 +126,16 @@ h2 a {
     margin: 10px;
 }
 
-.bookname > a > button{
-    font-size: 110%;
+.bookname a {
+    border: 1.5px solid red;
+    border-radius: 50px;
+    padding: 2px 10px;
+    transition: .5s;
+}
+
+.bookname a:hover {
+    background-color: red;
+    color: white;
 }
 
 
