--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ img {
     margin: 0;
 }
 
+
 /* button for entering book details */
 
 .clickable {
@@ -29,6 +30,7 @@ a.clickable a.non-clickable {
 }
 
 /* button for entering book details */
+
 
 /* header */
 
@@ -74,6 +76,7 @@ h1 a {
 
 /* header */
 
+
 /* section */
 
 img {
@@ -87,13 +90,13 @@ div {
 a {
     text-decoration: none;
     display: flex;
-    color: inherit;
     justify-content: center;
 }
 
 
 h2 a {
     text-align: center;
+    font-family: "Aladin", cursive ;
     color: black;
     margin: 8px 0;
 }
@@ -143,8 +146,8 @@ h2 a {
     padding: 10px;
 }
 
-
 /* section */
+
 
 /* Breadcrumb */
 
@@ -178,6 +181,7 @@ ul.breadcrumb li a:hover {
 
 /* Breadcrumb */
 
+
 /* All subcategories */
 
 #categories > div[id^="subcategory"] {
@@ -196,6 +200,7 @@ ul.breadcrumb li a:hover {
 }
 
 /* All subcategories */
+
 
 /* footer */
 
@@ -224,7 +229,12 @@ footer {
 
 /* footer */
 
+
 /* Book details */
+
+#book_details {
+    background-color:cornsilk;
+}
 
 #book_detail_images {
     display: flex;
@@ -275,11 +285,42 @@ footer {
     justify-content: center;
 }
 
-#book_description {
-    display: flex;
-    flex-direction: row;
+#book_price div:first-child {
+    margin-bottom: 30px;
 }
 
+button {
+    border-radius: 10px;
+    font-weight: bold;
+    padding: 10px 10px 10px 10px;
+}
 
 /* Book details */
 
+
+/* Book description */
+
+#book_description {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+#book_description > div:last-child {
+    margin-top: 15px;
+}
+
+#book_description h1 a{
+    color: black;
+    justify-content: flex-start;
+    margin-left: 15px;
+    font-family: "Garamond", serif;
+}
+
+#book_description p {
+    text-align: left;
+    margin-left: 15px;
+}
+
+
+/* Book description */
