--- a/style.css
+++ b/style.css
@@ -136,6 +136,11 @@ h1 a {
 
 /* section */
 
+section {
+    background-color: beige;
+    border-radius: 15px;
+}
+
 img {
     box-shadow: 5px 5px 5px  lightgray;
 }
@@ -164,7 +169,7 @@ h2 a {
 
 #categories > div[class^="container"] {
     border: 2px solid black;
-    margin: 30px 0;
+    margin: 30px 10px 30px 10px;
     border-radius: 20px;
 }
 
@@ -241,9 +246,13 @@ ul.breadcrumb li a:hover {
 
 /* All subcategories */
 
+#subcategories {
+    padding: 10px;
+}
+
 #subcategories > div[class^="container"] {
     border: 2px solid black;
-    margin: 30px 0 30px 10px;
+    margin: 30px 10px 30px 10px;
     border-radius: 20px;
 }
 
@@ -298,6 +307,7 @@ ul.breadcrumb li a:hover {
 
 footer {
     background-color:black;
+    padding: 0 50px 0 50px;
 }
 
 .bottom_nav {
@@ -429,3 +439,36 @@ button {
 
 
 /* Book description */
+
+
+/* Contact Page */
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+main h1 {
+    text-align: center;
+}
+
+.contact_page {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    display: table-cell;
+}
+
+.contact_page p {
+    display: flex;
+    justify-content: center;
+}
+
+.contact_page button {
+    font-size: 100%;
+    padding: 5px 10px 5px 10px;
+}
+
+/* Contact Page */
