--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* RMIT University Vietnam
+/* <!-- RMIT University Vietnam
 Course: COSC2430 Web Programming
 Semester: 2023A
 Assessment: Assignment 1
@@ -10,11 +10,13 @@ Acknowledgement:
         https://www.w3schools.com/howto/howto_css_breadcrumbs.asp
         https://stackoverflow.com/questions/4309950/how-to-align-input-forms-in-html
         https://quantrimang.com/hoc/button-trong-css-163772
+    Book images: Fahasa: https://www.fahasa.com/
+                 
 
 A static website for Assignment 1 (Web Programming) 
     Live URL to the website: https://guitarhero2004.github.io/Static-Website/
 
-    URL to my GitHub repository: https://github.com/GuitarHero2004/Static-Website */
+    URL to my GitHub repository: https://github.com/GuitarHero2004/Static-Website --> */
 
 
 
