--- a/style.css
+++ b/style.css
@@ -507,7 +507,7 @@ form {
 
 form div {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 20px 0;
 }
 
